--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
     </head>
     <body class="bg-dark">
         <section>
-            <div class="container mt-4">
+            <div id="dateTime" class="mt-3 ms-4 text-light d-flex gap-4">
+                <p id="Date" class="">00 : 00 : 00</p>
+                <p id="Time" class="">00 : 00 : 00</p>
+            </div>
+            <div class="container mt-1">
                 <h1 class="text-white text-center mb-4">Products Tracker</h1>
                 <form id="form1"
                     class="text-white  mx-auto bg-secondary p-3 rounded-3 ">
@@ -60,7 +64,7 @@
                     </div>
                 </form>
 
-                <table class="table table-hover mt-3 table-secondary">
+                <table class="table table-hover mt-3 table-secondary text-center">
                     <thead>
                         <tr>
                             <th>#</th>
@@ -68,6 +72,7 @@
                             <th>Price <small>(dh)</small></th>
                             <th>Quantity <small>(piece/kg)</small></th>
                             <th>Expiry Date</th>
+                            <th>Total Price <small>(dh)</small></th>
                             <th></th>
                             <th></th>
                         </tr>
@@ -79,6 +84,7 @@
                         <td>5</td>
                         <td>45</td>
                         <td>2027/05/17</td>
+                        <td>555</td>
                         <td>
                             <button
                                 class="btn btn-danger btn-sm w-100">Delete</button>
@@ -98,7 +104,7 @@
             </div>
         </section>
 
-        <footer class="bg-secondary text-white text-center py-5">
+        <footer class="bg-secondary text-white text-center py-4 mt-5">
             <p>Design & Development by Youssef</p>
             <p>© 2026. All rights reserved</p>
         </footer>
