--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <body class="bg-dark">
         <section>
             <div id="dateTime" class="mt-3 ms-4 text-light d-flex gap-4">
-                <p id="Date" class="">00 : 00 : 00</p>
+                <p id="Date" class="">00 / 00 / 00</p>
                 <p id="Time" class="">00 : 00 : 00</p>
             </div>
             <div class="container mt-1">
